Try to fix the project status alignment yet again

--- a/_sass/layout/_projects.scss
+++ b/_sass/layout/_projects.scss
@@ -59,8 +59,7 @@ html[data-theme="dark"] {
 }
 
 .project__status {
-  margin: 0.5em 0 1em;
-  padding: 0.3em 0;
+  margin: 0.5em 0;
   font-size: $type-size-6;
   color: var(--global-text-color-light);
   
